Working stats in graphical format

--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -4,7 +4,7 @@
     that represents the content -->
 <html> 
 <head>
-    <title>{% block title %}Yathi's Website{% endblock title %}</title>
+    <title>{% block title %}ACOR-E{% endblock title %}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
     {% block css %}{% endblock css %}
@@ -24,9 +24,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/about">About</a></li>
-            <li><a href="/survey/questions">Survey</a></li>
-            <li><a href="/survey/results">Results</a></li>
+            <li><a href="/acore">ACOR-E</a></li>
+            <li><a href="/surveys/questions">Survey</a></li>
+            <li><a href="/surveys/results">Results</a></li>
+            <li><a href="/contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
