--- a/surveys/templates/surveys/survey_list.html
+++ b/surveys/templates/surveys/survey_list.html
@@ -1,33 +1,37 @@
 {% extends '_layouts/base.html' %}
 
-{% block page_title %}<h2> The Survey </h2> {% endblock page_title %}
+
+{% block page_title %}<h2> Survey </h2> {% endblock page_title %}
 
 {% block page_content %}
 <div class="row">
     <div class="col-sm-1"></div>
     <div class="col-sm-6">
-        <ul style="list-style-type:none; padding:0; margin:0">    
-            {% for survey_question in object_list %}
-                <li> <h4> {{survey_question.question}}</h4></li>
-                <!-- note that you're not using action, here which may be an issue
-                and method can be set to get if post isn't working for some reason -->
-                <form method="post">
-                {% csrf_token %}
 
-                {% for choice in survey_question.choice_set.all %}
-                    <p> test </p>
-                    <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}" />
-                    <label for="choice{{ forloop.counter }}">{{ choice.answer_text }}</label>
-                    <br/>
-                    <input type="submit" value="Submit" class="btn btn-success"/>
+        {% if not_complete %} <div class="alert alert-danger"> Please answer all questions</div> {% endif %}
 
+        <form method="post" action="http://127.0.0.1:8000/surveys/submitting/">
+            {% csrf_token %}
+
+            <ul style="list-style-type:none; padding:0; margin:0"> 
+
+                {% for survey_question in object_list %}
+                    <li> <h4> {{survey_question.question}}</h4></li>
+
+                        {% for multiple_choice_answer in survey_question.answer_set.all %}
+                            <input type="radio" name="{{survey_question}}" id="choice{{ forloop.counter }}" value="{{ multiple_choice_answer.id}}" />
+                            <label for="choice{{ forloop.counter }}"> {{multiple_choice_answer.answer_text}} </label> <br />
+                        {% endfor %}
+
+                    <div class="page-header"></div>
                 {% endfor %}
 
-                </form>
-                <div class="page-header"></div>
-            {% endfor %}
-        </ul> 
-        <input type="submit" value="Submit" class="btn btn-success"/>
+            </ul>
+
+            <input type="submit" class="btn btn-success"  value="Submit"/> 
+            <p></p>
+        </form>
+
     </div>
     <div class="col-sm-5"></div>
 </div>
