--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,42 @@
 {% extends '_layouts/base.html' %}
 
 {% block page_title %} <h2>The Game</h2> {% endblock page_title %}
-{% block page_content %} <p> The game could be here in the future </p> {% endblock page_content %}
+{% block page_content %} 
+
+    <!-- This half is the game -->
+    <div class="col-sm-6">
+            <h3> The Game Side </h3>
+            <p> Haven't decided on the border around the game text to make it stand out </p>
+            <div class="well"> Game text prompts </div>
+            <div class="row" style="margin-left:auto; margin-right:auto">
+                <button type="button" class="btn btn-success"> A</button> 
+                <button type="button" class="btn btn-primary"> B </button> 
+                <button type="button" class="btn btn-warning"> C </button> 
+                <button type="button" class="btn btn-danger"> D </button> 
+
+            </div>
+    </div>
+
+    <!-- This half displays the NPCs -->
+    <div class="col-sm-6">
+        <h3> NPCs </h3>
+        <!-- Add forloop here for each npc -->
+        <p> There will be a for loop to add each of the NPCs here: Here are some examples </p>
+        <div class="alert alert-success"> 
+            <h5 style="margin-top:-1em"> NPC NAME 1 </h5>
+            <p> Emotion: SAD </p>
+            <p> Next Action: Move in line </p>
+        </div>
+        <div class="alert alert-success"> 
+            <h5 style="margin-top:-1em"> NPC NAME 2 </h5>
+            <p> Emotion: HAPPY </p>
+            <p> Next Action: PASSIVE </p>
+        </div>
+        <div class="alert alert-success"> 
+            <h5 style="margin-top:-1em"> NPC NAME 3 </h5>
+            <p> Emotion: ANXIOUS </p>
+            <p> Next Action: STOP ANYONE FROM MOVING </p>
+        </div>
+    </div>
+
+{% endblock page_content %}
