--- a/templates/home.html
+++ b/templates/home.html
@@ -2,63 +2,54 @@
 
 
 {% block page_title %} <h2>The Game</h2> {% endblock page_title %}
+
+{% block css %}
+
+.game_input{
+    width:100%;
+}
+
+{% endblock css %}
+
 {% block page_content %} 
 
     <!-- This half is the game -->
-    <div class="col-sm-6">
-            <h3> The Game Side </h3>
+    <div class="col-sm-8">
+            <h3 style="text-align:center"> The Game Side </h3>
             <strong><p id="last_move"> </p></strong>
             <div class="well" id="game_text"> Game text prompts </div>
-            <div class="row" style="margin-left:auto; margin-right:auto">
-                <button type="button" class="btn btn-success" id="game_input_a"> A</button> 
-                <button type="button" class="btn btn-primary" id="game_input_b"> B </button> 
-                <button type="button" class="btn btn-warning" id="game_input_c"> C </button> 
-                <button type="button" class="btn btn-danger" id="game_input_d">  D </button> 
-
+            <div class="col-sm-2"> </div>
+            <div class="col-sm-8">
+                <div class='col-sm-3'><button type="button" class="btn btn-success game_input" > A</button> </div>
+                <div class="col-sm-3"><button type="button" class="btn btn-primary game_input" > B </button> </div>
+                <div class="col-sm-3"><button type="button" class="btn btn-warning game_input" > C </button> </div>
+                <div class="col-sm-3"><button type="button" class="btn btn-danger game_input" >  D </button> </div>
             </div>
+
     </div>
 
     <!-- This half displays the NPCs -->
-    <div class="col-sm-6">
+    <div class="col-sm-4">
         <h3 style="text-align:center"> NPCs </h3>
-        <div class="col-sm-6">
             <!-- Add forloop here for each npc -->
-            <h4> Current NPCs </h4>
-            <div class="alert alert-success" id="npc_1"> 
-                <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 1 </h5>
-                <p class="npc_emotion"> Emotion: SAD </p>
-                <p class="npc_action"> Next Action: Move in line </p>
-            </div>
-            <div class="alert alert-success" id="npc_3"> 
-                <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 2 </h5>
-                <p class="npc_emotion"> Emotion: HAPPY </p>
-                <p class="npc_action"> Next Action: PASSIVE </p>
-            </div>
-            <div class="alert alert-success" id="npc_5"> 
+        <h4> Current NPCs </h4>
+        <div class="alert alert-success" id="npc_1"> 
+            <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 1 </h5>
+            <p class="npc_emotion"> Emotion: SAD </p>
+            <p class="npc_action"> Next Action: Move in line </p>
+        </div>
+        <div class="alert alert-success" id="npc_3"> 
+            <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 2 </h5>
+            <p class="npc_emotion"> Emotion: HAPPY </p>
+            <p class="npc_action"> Next Action: PASSIVE </p>
+        </div>
+        <div class="alert alert-success" id="npc_5">
                 <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 3 </h5>
                 <p class="npc_emotion"> Emotion: ANXIOUS </p>
                 <p class="npc_action"> Next Action: STOP ANYONE FROM MOVING </p>
-            </div>
         </div>
-        <div class="col-sm-6">
-            <!-- Add forloop here for each npc -->
-            <h4> Old NPCs </h4>
-            <div class="alert alert-success" id="npc_2"> 
-                <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 1 </h5>
-                <p class="npc_emotion"> Emotion: SAD </p>
-                <p class="npc_action"> Next Action: Move in line </p>
-            </div>
-            <div class="alert alert-success" id="npc_4"> 
-                <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 2 </h5>
-                <p class="npc_emotion"> Emotion: HAPPY </p>
-                <p class="npc_action"> Next Action: PASSIVE </p>
-            </div>
-            <div class="alert alert-success" id="npc_6"> 
-                <h5 style="margin-top:-1em" class="npc_name"> NPC NAME 3 </h5>
-                <p class="npc_emotion"> Emotion: ANXIOUS </p>
-                <p class="npc_action"> Next Action: STOP ANYONE FROM MOVING </p>
-            </div>
-        </div>
+
+
     </div>
 
 {% endblock page_content %}
@@ -75,61 +66,23 @@
             $last_move.html('Last move: ' + button_text)
         }
 
+
         function update_game_text($button_pressed){
             var $game_text = $('#game_text')
             var new_text = $button_pressed.text()
             $game_text.text($game_text.text() + new_text)
         }
 
-        function update_npcs(){
-            // update for loop bound to a dynamic value
-            for(var i = 1; i < 7; i+=2){
-                var original_id = "npc_" + i
-                var old_id = "npc_" + (i + 1)
-                var $original_npc = $('#' + original_id +)
-                var $old_npc = $('#' + old_id)
-                $old_npc.
-            }
-
-        }
 
         $('document').ready(function(){
-            $('#game_input_a').click(function(){
-                var $button_selected = $('#game_input_a')
-                update_last_move($button_selected)
-                update_game_text($button_selected)
-                update_npcs()
-            });
-            $('#game_input_b').click(function(){
-                var $button_selected = $('#game_input_b')
-                update_last_move($button_selected)
-                update_game_text($button_selected)
-                update_npcs()
-            });
-            $('#game_input_c').click(function(){
-                var $button_selected = $('#game_input_c')
-                update_last_move($button_selected)
-                update_game_text($button_selected)
-                update_npcs()
-            });
-            $('#game_input_d').click(function(){
-                var $button_selected = $('#game_input_d')
-                update_last_move($button_selected)
-                update_game_text($button_selected)
-                update_npcs()
+            $('.game_input').click(function(){
+                update_last_move($(this))
+                update_game_text($(this))
             });
             
         });
     </script>
 {% endblock js %}
-
-
-
-
-
-
-
-
 
 
 
