NPC divs are now dependant on variables in the function view

--- a/surveys/templates/surveys/survey_results.html
+++ b/surveys/templates/surveys/survey_results.html
@@ -1,5 +1,5 @@
 {% extends '_layouts/base.html' %}
-{% load surveys_stats %}
+{% load surveys_tags %}
 
 {% block page_title %} <h2> Results </h2> {% endblock page_title %}
 
