--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -28,8 +28,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/acore">ACOR-E</a></li>
-            <li><a href="/surveys/questions">Survey</a></li>
-            <li><a href="/surveys/results">Results</a></li>
+            <li><a href="/surveys/questions/">Survey</a></li>
+            <li><a href="/surveys/results/">Results</a></li>
             <li><a href="/contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
