--- a/surveys/templates/surveys/survey_list.html
+++ b/surveys/templates/surveys/survey_list.html
@@ -10,7 +10,7 @@
 
         {% if not_complete %} <div class="alert alert-danger"> {{not_complete}}</div> {% endif %}
 
-        <form method="post" action="http://127.0.0.1:8000/surveys/submitting/">
+        <form method="post" action="http://acore-survey.herokuapp.com/surveys/submitting/">
             {% csrf_token %}
 
             <ul style="list-style-type:none; padding:0; margin:0"> 
