--- a/templates/_layouts/base.html
+++ b/templates/_layouts/base.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <!-- The base file for each page on teh website, should have a naviation bar
-    at the top with options to navigate the site, as well as a header on teh top of the page 
+    at the top with options to navigate the site, as well as a header on the top of the page 
     that represents the content -->
 <html> 
 <head>
     <title>{% block title %}ACOR-E{% endblock title %}</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    
+
     {% block css %}{% endblock css %}
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
