Changed formatting on page load to match the ajax formatting

--- a/surveys/templates/surveys/survey_results.html
+++ b/surveys/templates/surveys/survey_results.html
@@ -37,3 +37,13 @@
     <div class="col-sm-4"></div>
 </div>
 {% endblock page_content %}
+
+{% block js %}
+     <script>
+    //     $('document').ready(function(){
+    //         for each element in  list, change to 
+    //             switch(%4 colors)...
+    //     });
+    </script>
+
+{% endblock js %}
